--- a/main.css
+++ b/main.css
@@ -36,4 +36,77 @@ a {
 
 li {
   list-style-type: none;
+  line-height: 32px;
+}
+
+/* "footer" on mobile */
+.sidebar {
+  background: pink;
+  padding: 20px;
+  position: absolute;
+  width: 15%;
+  /* view height is like percentage */
+  height: 100vh;
+  top: 75px;
+  right: 0;
+}
+
+@media only screen and (max-width: 800px) {
+
+  #title {
+    font-size: 48px;
+  }
+
+  h2 {
+    font-size: 32px;
+  }
+
+  h3 {
+    font-size: 28px;
+  }
+
+  li {
+    font-size: 24px;
+    line-height: 32px;
+  }
+
+  /* Keyframes example */
+  @keyframes shrink-footer {
+    0% {
+      height: 130px;
+    }
+    30% {
+      height: 600px;
+    }
+    100% {
+      height: 130px;
+    }
+  }
+
+  /* it becomes a "footer" */
+  .sidebar {
+    background: darkseagreen;
+    top: inherit;
+    height: 130px;
+    right: inherit;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    color: white;
+    animation: shrink-footer 5s;
+  }
+
+  /* so the "footer" doesn't hide content */
+  .container {
+    margin-bottom: 130px;
+  }
+
+
+}
+
+
+@media only screen and (max-width: 330px) {
+  #title {
+    background: rebeccapurple;
+  }
 }
