--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ li {
 
 /* "footer" on mobile */
 .sidebar {
-  background: pink;
+  background: tomato;
   padding: 20px;
   position: absolute;
   width: 15%;
