rebecca purple sidebar

--- a/main.css
+++ b/main.css
@@ -41,7 +41,8 @@ li {
 
 /* "footer" on mobile */
 .sidebar {
-  background: pink;
+  background: rebeccapurple;
+  color: white;
   padding: 20px;
   position: absolute;
   width: 15%;
@@ -49,6 +50,10 @@ li {
   height: 100vh;
   top: 75px;
   right: 0;
+}
+
+.sidebar a {
+  color: white;
 }
 
 @media only screen and (max-width: 800px) {
