--- a/main.css
+++ b/main.css
@@ -65,6 +65,7 @@ details {
   background: rebeccapurple;
   color: white;
   border-radius: 5px;
+  animation: slide-in 2.5s;
 
 }
 details:hover {
@@ -87,6 +88,21 @@ details > summary{
 
 details > summary::-webkit-details-marker {
   display: none;
+}
+
+@keyframes slide-in {
+  0% {
+    transform: translateX(-20%);
+    opacity: 0;
+  }
+  80% {
+    transform: translateX(+1%);
+    opacity: 0.95;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
 }
 
 @media only screen and (max-width: 800px) {
